3-grc/2-fraud-httproute.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grc-ns
  name: grc-ns
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: fraud-httproute
  namespace: grc-ns
spec:
  parentRefs:
  - name: grc-kong-api-gateway
    namespace: grc-kic
  hostnames:
    - "grc.hellocloudbank.io"
    - "grc.hellocloud.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: fraud-svc
      port: 6061
